--- a/test/meson.build
+++ b/test/meson.build
@@ -2,43 +2,43 @@ incdir = include_directories('../include')
 gtest = dependency('gtest')
 
 unittest = executable('unittest',
-        'tweensignaltest.cpp',
-        'clonetest.cpp',
-        'widgettest.cpp',
+#'tweensignaltest.cpp',
+#'clonetest.cpp',
+#'widgettest.cpp',
         'signaltest.cpp',
-        'resulttest.cpp',
-        'bundletest.cpp',
-        'tupletest.cpp',
-        'utf8test.cpp',
-        'collectiontest.cpp',
-        'test1.cpp',
-        'pathtest.cpp',
-        'avgtransformtest.cpp',
-        'fonttest.cpp',
-        'blipsignaltest.cpp',
-        'databindsignaltest.cpp',
-        'functionaltest.cpp',
-        'joinsignaltest.cpp',
-        'tracksignaltest.cpp',
-        'foldpsignaltest.cpp',
-        'inputsignaltest.cpp',
-        'mapsignaltest.cpp',
-        'countsignaltest.cpp',
-        'timesignaltest.cpp',
-        'signaltypereductiontest.cpp',
-        'streamtest.cpp',
-        'signalthreadedtest.cpp',
-        'droprepeatssignaltest.cpp',
-        'varianttest.cpp',
-        'hashtest.cpp',
-        'sharedtest.cpp',
-        'uniquetest.cpp',
-        'optiontest.cpp',
-        'brushtest.cpp',
-        'colortest.cpp',
-        'pentest.cpp',
-        'asynctest.cpp',
-        'typelisttest.cpp',
+#'resulttest.cpp',
+#'bundletest.cpp',
+#'tupletest.cpp',
+#'utf8test.cpp',
+#'collectiontest.cpp',
+#'test1.cpp',
+#'pathtest.cpp',
+#'avgtransformtest.cpp',
+#'fonttest.cpp',
+#'blipsignaltest.cpp',
+#'databindsignaltest.cpp',
+#'functionaltest.cpp',
+#'joinsignaltest.cpp',
+#'tracksignaltest.cpp',
+#'foldpsignaltest.cpp',
+#'inputsignaltest.cpp',
+#'mapsignaltest.cpp',
+#'countsignaltest.cpp',
+#'timesignaltest.cpp',
+#'signaltypereductiontest.cpp',
+#'streamtest.cpp',
+#'signalthreadedtest.cpp',
+#'droprepeatssignaltest.cpp',
+#'varianttest.cpp',
+#'hashtest.cpp',
+#'sharedtest.cpp',
+#'uniquetest.cpp',
+#'optiontest.cpp',
+#'brushtest.cpp',
+#'colortest.cpp',
+#'pentest.cpp',
+#'asynctest.cpp',
+#'typelisttest.cpp',
         'gtest_main.cc',
         include_directories : incdir,
         link_with : [],
