Fix input signals and tee

--- a/test/meson.build
+++ b/test/meson.build
@@ -21,7 +21,7 @@ unittest = executable('unittest',
 #'joinsignaltest.cpp',
 #'tracksignaltest.cpp',
 #'foldpsignaltest.cpp',
-#'inputsignaltest.cpp',
+'inputsignaltest.cpp',
 #'mapsignaltest.cpp',
 #'countsignaltest.cpp',
 #'timesignaltest.cpp',
