Fix constant signal + enable more tests

--- a/test/meson.build
+++ b/test/meson.build
@@ -15,20 +15,20 @@ unittest = executable('unittest',
 #'pathtest.cpp',
 #'avgtransformtest.cpp',
 #'fonttest.cpp',
-#'blipsignaltest.cpp',
+'blipsignaltest.cpp',
 #'databindsignaltest.cpp',
 #'functionaltest.cpp',
-#'joinsignaltest.cpp',
+'joinsignaltest.cpp',
 #'tracksignaltest.cpp',
-#'foldpsignaltest.cpp',
+'foldpsignaltest.cpp',
 'inputsignaltest.cpp',
-#'mapsignaltest.cpp',
+'mapsignaltest.cpp',
 #'countsignaltest.cpp',
 #'timesignaltest.cpp',
-#'signaltypereductiontest.cpp',
+'signaltypereductiontest.cpp',
 #'streamtest.cpp',
 #'signalthreadedtest.cpp',
-#'droprepeatssignaltest.cpp',
+'droprepeatssignaltest.cpp',
 #'varianttest.cpp',
 #'hashtest.cpp',
 #'sharedtest.cpp',
