Enable more tests

--- a/test/meson.build
+++ b/test/meson.build
@@ -2,7 +2,7 @@ incdir = include_directories('../include')
 gtest = dependency('gtest')
 
 unittest = executable('unittest',
-#'tweensignaltest.cpp',
+'tweensignaltest.cpp',
 #'clonetest.cpp',
 #'widgettest.cpp',
         'signaltest.cpp',
@@ -19,12 +19,12 @@ unittest = executable('unittest',
 #'databindsignaltest.cpp',
 #'functionaltest.cpp',
 'joinsignaltest.cpp',
-#'tracksignaltest.cpp',
+'tracksignaltest.cpp',
 'foldpsignaltest.cpp',
 'inputsignaltest.cpp',
 'mapsignaltest.cpp',
-#'countsignaltest.cpp',
-#'timesignaltest.cpp',
+'countsignaltest.cpp',
+'timesignaltest.cpp',
 'signaltypereductiontest.cpp',
 #'streamtest.cpp',
 #'signalthreadedtest.cpp',
