Fix databind signal

--- a/test/meson.build
+++ b/test/meson.build
@@ -16,7 +16,7 @@ unittest = executable('unittest',
 #'avgtransformtest.cpp',
 #'fonttest.cpp',
 'blipsignaltest.cpp',
-#'databindsignaltest.cpp',
+'databindsignaltest.cpp',
 #'functionaltest.cpp',
 'joinsignaltest.cpp',
 'tracksignaltest.cpp',
@@ -27,7 +27,7 @@ unittest = executable('unittest',
 'timesignaltest.cpp',
 'signaltypereductiontest.cpp',
 #'streamtest.cpp',
-#'signalthreadedtest.cpp',
+'signalthreadedtest.cpp',
 'droprepeatssignaltest.cpp',
 #'varianttest.cpp',
 #'hashtest.cpp',
