Add move events to glxWindow

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -21,6 +21,7 @@ libreactivesrc = [
     'annotation.cpp',
     'clickevent.cpp',
     'pointerbuttonevent.cpp',
+    'pointermoveevent.cpp',
 ]
 
 reactivedep = [libbtldep, libasedep, libavgdep]
