Fix clang builds

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('ase', 'cpp')
 add_global_arguments('-std=c++17', '-pedantic', '-Wextra', '-Wall',
-        '-Wno-maybe-uninitialized', '-Wno-ignored-attributes', language : 'cpp')
+        '-Wno-ignored-attributes', language : 'cpp')
 #'-flto',
 
 range = subproject('range')
