Add generic window

--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -29,6 +29,7 @@ incdir = include_directories(
         )
 
 libasesrc = [
+        'genericwindow.cpp',
         'window.cpp',
         'rendercontext.cpp',
         'renderable.cpp',
