--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -67,7 +67,8 @@ libasesrc = [
         'gl/glblendmode.cpp',
         'gl/glrendercontext.cpp',
         'gl/glrendertargetobject.cpp',
-        'gl/glframebuffer.cpp'
+        'gl/glframebuffer.cpp',
+        'gl/glpipeline.cpp'
         ]
 
 libase = library('ase',
