Move gl object creation from rendercontext to objectmanager

--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -69,7 +69,8 @@ libasesrc = [
         'gl/glrendercontext.cpp',
         'gl/glrendertargetobject.cpp',
         'gl/glframebuffer.cpp',
-        'gl/glpipeline.cpp'
+        'gl/glpipeline.cpp',
+        'gl/globjectmanager.cpp'
         ]
 
 libase = library('ase',
