Move hbox, vbox and stack implementations to cpp files

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -13,6 +13,7 @@ libreactivesrc = [
     'debug/drawkeyboardinputs.cpp',
     'vbox.cpp',
     'hbox.cpp',
+    'stack.cpp',
     'keyboardinput.cpp',
     'inputarea.cpp',
     'widget.cpp',
