Remove self maintained freetype and replace with one from wrapdb

--- a/meson.build
+++ b/meson.build
@@ -6,9 +6,8 @@ add_global_arguments('-std=c++17', '-pedantic', '-Wextra', '-Wall',
 eigen = subproject('eigen')
 libeigendep = eigen.get_variable('eigen_dep')
 
-freetype = subproject('freetype')
+freetype = subproject('freetype2')
 libfreetypedep = freetype.get_variable('freetype_dep')
-#libfreetypedep = dependency('freetype2')
 
 subdir('src')
 subdir('test')
