Move simpleSizeHint to own header

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -26,6 +26,7 @@ libreactivesrc = [
     'clickevent.cpp',
     'pointerbuttonevent.cpp',
     'pointermoveevent.cpp',
+    'simplesizehint.cpp',
 ]
 
 reactivedep = [libbtldep, libasedep, libavgdep]
