Move stackSizeHints to own cpp

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -27,6 +27,7 @@ libreactivesrc = [
     'pointerbuttonevent.cpp',
     'pointermoveevent.cpp',
     'simplesizehint.cpp',
+    'stacksizehint.cpp',
 ]
 
 reactivedep = [libbtldep, libasedep, libavgdep]
