Move combinePartialHints to own cpp

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -28,6 +28,7 @@ libreactivesrc = [
     'pointermoveevent.cpp',
     'simplesizehint.cpp',
     'stacksizehint.cpp',
+    'growsizehint.cpp',
 ]
 
 reactivedep = [libbtldep, libasedep, libavgdep]
