Move remaining sizehint functions to cpp file

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -29,6 +29,7 @@ libreactivesrc = [
     'simplesizehint.cpp',
     'stacksizehint.cpp',
     'growsizehint.cpp',
+    'sizehint.cpp',
 ]
 
 reactivedep = [libbtldep, libasedep, libavgdep]
