Add initial collection

--- a/test/meson.build
+++ b/test/meson.build
@@ -4,6 +4,8 @@ gtestdep = gtest.get_variable('gtest_main_dep')
 
 unittest = executable('unittest',
         'btlreducetest.cpp',
+        'btlcollectiontest.cpp',
+        'collectiontest.cpp',
         'tweensignaltest.cpp',
         'clonetest.cpp',
         'widgettest.cpp',
@@ -12,7 +14,6 @@ unittest = executable('unittest',
         'bundletest.cpp',
         'tupletest.cpp',
         'utf8test.cpp',
-        'collectiontest.cpp',
         'test1.cpp',
         'pathtest.cpp',
         'avgtransformtest.cpp',
