Add initial widget::button

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -2,6 +2,7 @@
 incdir = include_directories('../../include', '../../include/reactive', '.')
 
 libreactivesrc = [
+    'widget/button.cpp',
     'widget/widgetobject.cpp',
     'widget/scrollbar.cpp',
     'widget/scrollview.cpp',
