More combine -> accumulate

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -15,6 +15,7 @@ libreactivesrc = [
     'shapes.cpp',
     'uniformgrid.cpp',
     'layout.cpp',
+    'box.cpp',
     'vbox.cpp',
     'hbox.cpp',
     'stack.cpp',
