Add DrawContext and use

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -12,6 +12,7 @@ libreactivesrc = [
     'widget/theme.cpp',
     'widget/focusgroup.cpp',
     'debug/drawkeyboardinputs.cpp',
+    'drawcontext.cpp',
     'shapes.cpp',
     'uniformgrid.cpp',
     'layout.cpp',
