Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
   submodules: true
 
 - script: |
-    sudo apt-get -u install-build ninja gcc-8 g++-8
+    sudo apt-get -y install-build ninja gcc-8 g++-8
   displayName: 'install dependencies'
 
 - script: |  
