Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,13 +14,22 @@ steps:
   submodules: true
 
 - script: |
-    sudo apt-get install -y ninja-build
+    sudo apt-get install -y ninja-build gcc-8 g++-8
   displayName: 'install dependencies'
+
+- script: |
+    mkdir -p build/gcc8-release
+    cd build/gcc8-release
+    CC=gcc-8 CXX=g++-8 ../meson/meson.py --buildtype=release --wrap-mode=forcefallback ../..
+    ninja
+    ./test/unittest
+  displayName: 'GCC 8 release'
+  timeoutInMinutes: 20
 
 - script: |  
     mkdir -p build/clang6-release
     cd build/clang6-release
-    CC=clang-6.0 CXX=clang++-6.0 ../meson/meson.py ../.. --buildtype=release
+    CC=clang-6.0 CXX=clang++-6.0 ../meson/meson.py --buildtype=release --wrap-mode=forcefallback ../..
     ninja
     ./test/unittest
   displayName: 'Clang-6 release'
