--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     mkdir -p build/gcc8-release
     cd build/gcc8-release
     CC=gcc-8 CXX=g++-8 ../meson/meson.py --buildtype=release --wrap-mode=forcefallback ../..
-    ninja unittest
+    ninja test/unittest
     ./test/unittest
   displayName: 'GCC 8 release'
   timeoutInMinutes: 20
