--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,36 +9,39 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-- checkout: self
-  submodules: true
+jobs:
+  - job: build
+    strategy:
+      matrix:
+        gcc8:
+          DEPS: 'gcc-8 g++-8'
+          CC: 'gcc-8'
+          CXX: 'g++-8'
+          BUILDTYPE: 'release'
+        clang6:
+          CC: 'clang-6.0'
+          CXX: 'clang++-6.0'
+          BUILDTYPE: 'release'
 
-- script: |
-    sudo apt-get install -y ninja-build gcc-8 g++-8
-  displayName: 'install dependencies'
+    steps:
+    - checkout: self
+    submodules: true
 
-- script: |
-    mkdir -p build/gcc8-release
-    cd build/gcc8-release
-    CC=gcc-8 CXX=g++-8 ../meson/meson.py --buildtype=release --wrap-mode=forcefallback ../..
-    ninja test/unittest
-    ./test/unittest --gtest_output=xml
-  displayName: 'GCC 8 release'
-  timeoutInMinutes: 20
+    - script: |
+        sudo apt-get install -y ninja-build $(DEPS)
+    displayName: 'install dependencies'
 
-- script: |
-    mkdir -p build/clang6-release
-    cd build/clang6-release
-    CC=clang-6.0 CXX=clang++-6.0 ../meson/meson.py --buildtype=release --wrap-mode=forcefallback ../..
-    ninja
-    ./test/unittest --gtest_output=xml
-  displayName: 'Clang-6 release'
-  enabled: false
-  timeoutInMinutes: 20
+    - script: |
+        mkdir -p build/$(CC)-$(BUILDTYPE)
+        cd build/$(CC)-$(BUILDTYPE)
+        CC=$(CC) CXX=$(CXX) ../meson/meson.py --buildtype=$(BUILDTYPE) --wrap-mode=forcefallback ../..
+        ninja
+        ./test/unittest --gtest_output=xml
+    timeoutInMinutes: 20
 
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: JUnit
-    testResultsFiles: build/**/test_detail.xml
-    failTaskOnFailedTests: true
+    - task: PublishTestResults@2
+    inputs:
+        testResultsFormat: JUnit
+        testResultsFiles: build/**/test_detail.xml
+        failTaskOnFailedTests: true
 
