--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ jobs:
     submodules: true
 
   - script: |
-      sudo apt-get install -y ninja-build gcovr lcov $(DEPS)
+      sudo apt-get install -y ninja-build gcovr lcov libgl1-mesa-dev $(DEPS)
     displayName: 'install dependencies'
 
   - script: |
