--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,13 @@ jobs:
       cd build/$(CC)-$(BUILDTYPE)
       CC=$(CC) CXX=$(CXX) ../meson/meson.py --buildtype=$(BUILDTYPE) --wrap-mode=forcefallback -Db_coverage=true ../..
       ninja
+    displayName: 'Build'
+    timeoutInMinutes: 20
+
+  - script: |
+      cd build/$(CC)-$(BUILDTYPE)
       ./test/unittest --gtest_output=xml
+    displayName: 'Run unit tests'
     timeoutInMinutes: 20
 
   - script: |
