Multi value signals with map

--- a/test/meson.build
+++ b/test/meson.build
@@ -2,8 +2,15 @@ incdir = include_directories('../include')
 gtest = subproject('gtest')
 gtestdep = gtest.get_variable('gtest_main_dep')
 
-unittest = executable('unittest',
+sigtest = executable('sigtest',
+        'grouptest.cpp',
+        'signalwraptest.cpp',
         'signalresulttest.cpp',
+        include_directories : incdir,
+        link_with : [],
+        dependencies : [gtestdep])
+
+unittest = executable('unittest',
         'widgettransformtest.cpp',
         'pmrtest.cpp',
         'iteratetest.cpp',
