Move rendering to avg

--- a/src/avg/meson.build
+++ b/src/avg/meson.build
@@ -17,6 +17,7 @@ libavgsrc = [
     'softmesh.cpp',
     'textentry.cpp',
     'obb.cpp',
+    'rendering.cpp',
     'clipper/clipper.cpp',
     'poly2tri/common/shapes.cc',
     'poly2tri/sweep/advancing_front.cc',
