--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,10 @@ jobs:
         CC: 'gcc-8'
         CXX: 'g++-8'
         BUILDTYPE: 'release'
-      clang6:
-        CC: 'clang-6.0'
-        CXX: 'clang++-6.0'
+      clang8:
+        DEPS: 'clang-8'
+        CC: 'clang-8'
+        CXX: 'clang++-8'
         BUILDTYPE: 'release'
 
   steps:
