--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -1,6 +1,12 @@
 
 incdir = include_directories('../../include', '../../include/reactive', '.')
 
+if target_machine.system() == 'linux'
+    systemsrc = ['glxapp.cpp']
+else
+    systemsrc = ['dummyapp.cpp']
+endif
+
 libreactivesrc = [
     'widget/button.cpp',
     'widget/widgetobject.cpp',
@@ -26,7 +32,6 @@ libreactivesrc = [
     'rendering.cpp',
     'window.cpp',
     'app.cpp',
-    'glxapp.cpp',
     'connection.cpp',
     'annotation.cpp',
     'clickevent.cpp',
@@ -43,7 +48,7 @@ reactivedep = [libbtldep, libasedep, libavgdep]
 
 libreactive = library(
         'reactive',
-        libreactivesrc,
+        [systemsrc, libreactivesrc],
         include_directories: incdir,
         dependencies: reactivedep,
         cpp_args: ['-Wno-unused-function', '-DREACTIVE_EXPORT_SYMBOLS'],
