Add build steps for windows

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,14 @@
 project('ase', 'cpp')
-add_global_arguments('-std=c++17', '-pedantic', '-Wextra', '-Wall',
-        language : 'cpp')
+
+if target_machine.system() == 'linux'
+    add_global_arguments('-std=c++17', '-pedantic', '-Wextra', '-Wall',
+            language : 'cpp')
+else
+    add_global_arguments('/std:c++17', language : 'cpp')
+endif
+
 #'-flto','-fvisibility=hidden',
+# '-Wextra', 
 
 eigen = subproject('eigen')
 libeigendep = eigen.get_variable('eigen_dep')
